--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ path = "src/lib.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = { version = "4.0.0-beta.8" }
+actix-web = "4.0.0-beta.8"
 pin-project = "1.0"
 actix-utils = "3.0"
 futures = "0.3"
